--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "SID Installer",
     "type": "ataslangit-sidcore",
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^7.4 || ^8.0"
     },
     "minimum-stability": "dev",
     "prefer-stable": true
